<resources>
    <string name="app_name">RaahatApp</string>
    <string name="screen_description">OnboardingScreen</string>
    <string name="splash_screen_name">RAAHAT</string>
    <string name="splash_screen_tagline">Your Legal Ally</string>
    <string name="welcome">Welcome Back!</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="new_user_click_here">New User ? Click here to Register</string>

    //onboarding screen strings
    //headings
    <string name="onboarding_screen_heading_1">Ensuring Safety and Security</string>
    <string name="onboarding_screen_heading_2">Legal Help at your Fingertips</string>
    <string name="onboarding_screen_heading_3">Track Your Case</string>
    //descriptions
    <string name="onboarding_screen_desc_1">Empowering your Safety : Join a secure Community for Seeking Help in times of need. Your Trust is OUR priority</string>
    <string name="onboarding_screen_desc_2">Access 24/7 Support For seeking help and legal assistance. Your rights, OUR commitment.</string>
    <string name="onboarding_screen_desc_3">Get in touch with your case files the way you want. Your Case, OUR responsibility.</string>
    <string name="login">Login</string>
    <string name="search">Search…</string>
    <string name="title_activity_rehab">Rehab</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="searchbar">Search</string>
    <string name="welcome_dashboard">Welcome!</string>
    <string name="how_can_we_help">How Can We Help?</string>
    <string name="view_your_case_files">View Your Case Files</string>
    <string name="progress">Progress</string>
    <string name="legal_aid">Legal Aid</string>
    <string name="rehab_dashboard">Rehab</string>
    <string name="home_dashboard">Home</string>
    <string name="court_files">Court Files</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="menu">Menu</string>
    <string name="get_a_consult">Get a Consult</string>
    <string name="detoxification">Detoxification</string>
    <string name="therapy_and_counselling">Therapy and Counselling</string>
    <string name="medical_and_mental_healthcare">Medical &amp; Mental Healthcare</string>
    <string name="educational_programs">Educational Programs</string>
    <string name="support_groups_and_peer_support">Support Groups &amp; Peer Support</string>
    <string name="holistic_therapies">Holistic Therapies</string>
    <string name="aftercare_planning_and_support">Aftercare Planning and Support</string>
    <string name="specialised_programs">Specialised Programs</string>
    <string name="rehab">Rehab</string>
    <string name="court">Court</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="skip">Skip</string>
    <string name="profiletop">Profile</string>
    <string name="aman_dhomne">Aman Dhomne</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notifications">Notifications</string>
    <string name="night_mode">Night Mode</string>
    <string name="private_account">Private Account</string>
    <string name="general">General</string>
    <string name="cnr_no">CNR no.</string>
    <string name="helpline">Helpline</string>
    <string name="history">History</string>
    <string name="personalise">Personalise</string>
    <string name="backup">Backup</string>
    <string name="faq">FAQ</string>
    <string name="FAQ" />
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log Out</string>
    <string name="app_language">App language</string>
    <string-array name="genderdropdown">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
        <item>Prefer not to say</item>
    </string-array>



</resources>