<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RehabScreen"
    android:background="#fcf2fa">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/rehab"
        android:textColor="#DC000000"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonDetoxification"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#1D176C0D"
                android:fontFamily="@font/abel"
                android:text="@string/detoxification"
                android:textColor="#1E0109"
                android:textSize="28sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonTherapyNCounselling"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#25703333"
                android:textSize="28sp"
                android:fontFamily="@font/abel"
                android:textColor="#1E0109"
                android:textStyle="bold"
                android:text="@string/therapy_and_counselling" />

            <Button
                android:id="@+id/buttonMedicalHealthcare"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#1D176C0D"
                android:textSize="28sp"
                android:fontFamily="@font/abel"
                android:textColor="#1E0109"
                android:textStyle="bold"
                android:text="@string/medical_and_mental_healthcare" />

            <Button
                android:id="@+id/buttonEducationalPrograms"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#25703333"
                android:textSize="28sp"
                android:fontFamily="@font/abel"
                android:textColor="#1E0109"
                android:textStyle="bold"
                android:text="@string/educational_programs" />

            <Button
                android:id="@+id/buttonSupportGroups"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#1D176C0D"
                android:textSize="28sp"
                android:fontFamily="@font/abel"
                android:textColor="#1E0109"
                android:textStyle="bold"
                android:text="@string/support_groups_and_peer_support" />

            <Button
                android:id="@+id/buttonHolisticTherapies"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#25703333"
                android:textSize="28sp"
                android:fontFamily="@font/abel"
                android:textColor="#1E0109"
                android:textStyle="bold"
                android:text="@string/holistic_therapies" />

            <Button
                android:id="@+id/buttonAftercarePlanning"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#1D176C0D"
                android:textSize="28sp"
                android:fontFamily="@font/abel"
                android:textColor="#1E0109"
                android:textStyle="bold"
                android:text="@string/aftercare_planning_and_support" />

            <Button
                android:id="@+id/buttonSpecialisedPrograms"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#25703333"
                android:textSize="28sp"
                android:fontFamily="@font/abel"
                android:textColor="#1E0109"
                android:textStyle="bold"
                android:text="@string/specialised_programs" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>