<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:flow_horizontalAlign="center">

    <ImageView
        android:id="@+id/titleImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/screen_description"
        android:scaleType="centerCrop"
        android:src="@drawable/onboarding_screen_1" />

    <TextView
        android:id="@+id/texttitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-300dp"
        android:background="#39000000"
        android:fontFamily="@font/newake"
        android:text="@string/onboarding_screen_heading_1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="38sp" />

    <TextView
        android:id="@+id/textdescription"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/onboarding_screen_desc_1"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="#39000000"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"/>


</LinearLayout>